<resources>
    <string name="app_name">Playlist maker</string>
    <string name="find">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support_send">Написать в поддержку</string>
    <string name="EULA">Пользовательское соглашение</string>
    <string name="back">back</string>
    <string name="uri_of_course">https://practicum.yandex.ru/android-developer/</string>
    <string name="mail">Cer.97@yandex.ru</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker.</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="eula_uri">https://yandex.ru/legal/practicum_offer/</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="lost_connection">Проблемы со связью</string>
    <string name="message_lost_connection">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="default_track_time">--:--</string>
    <string name="you_were_looking_for">Вы искали</string>
    <string name="clean_history">Очистить историю</string>
    <string name="track_time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="style">Жанр</string>
    <string name="year">Год</string>
    <string name="country">Страна</string>
    <string name="play_progress">00:00</string>
    <string name="library_empty">Ваша медиатека пуста</string>
    <string name="albums_empty">Вы не создали \n ни одного плейлиста</string>
    <string name="new_album">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="albums">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="Album_name">Название*</string>
    <string name="about">Описание</string>
    <string name="create">Создать</string>
    <string name="track3">треков</string>
    <string name="track1">трек</string>
    <string name="track2">трека</string>
    <string name="add_to_playList">Добавить в плейлист</string>
    <string name="end_of_create">Завершить создание плейлиста?</string>
    <string name="unsaved_data_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="playlist">Плейлист</string>
    <string name="created">создан</string>
    <string name="track_added_yet">Трек уже добавлен в плейлист</string>
    <string name="track_added">Добавлено в плейлист</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="delete">Удалить</string>
    <string name="delete_track_title">"Удалить трек?"</string>
    <string name="delete_track">"Вы уверены, что хотите удалить трек из плейлиста?"</string>
    <string name="delete_album">"Хотите удалить плейлист"</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="Share">Поделиться</string>
    <string name="edit_information">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="empty_playlist">Плейлист пуст</string>
</resources>