<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/ya_blue"
    android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="14dp"
            android:gravity="top"
            android:text="@string/app_name"
            android:fontFamily="@font/ys_display_medium"
            android:letterSpacing="0"
            android:textColor="@color/ya_white"
            android:textSize="@dimen/ys_text_22">

        </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/indent_start_end"
        android:paddingEnd="@dimen/indent_start_end"
        android:orientation="vertical">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/find_button"
            android:text="@string/find"
            app:icon="@drawable/ic_find"
            style="@style/BigButton"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/library_button"
            android:text="@string/library"
            app:icon="@drawable/ic_library"
            style="@style/BigButton"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_button"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings"
            android:layout_marginBottom="28dp"
            style="@style/BigButton"
             />

    </LinearLayout>




</LinearLayout>

