<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/ya_white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title_template"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:padding="4dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/arrow_back"
            android:layout_width="@dimen/back_button"
            android:layout_height="@dimen/back_button"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:cropToPadding="true"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:text="@string/settings"
            android:fontFamily="@font/ys_display_medium"
            android:letterSpacing="0"
            android:textColor="@color/ya_black"
            android:textSize="@dimen/ys_text_22">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24sp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="12dp">

                <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/theme_switch"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:gravity="center_vertical"
                app:thumbTint="@color/ya_text_grey"
                app:trackTint="@color/ya_light_gray"
                android:fontFamily="@font/ys_display_regular"
                android:text="@string/dark_theme"
                android:textColor="@color/black"
                android:textSize="@dimen/ys_text_16"
                />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_line_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/ys_display_regular"
                android:text="@string/share_app"
                android:textColor="@color/black"
                android:textSize="@dimen/ys_text_16"
                />

            <ImageView
                android:layout_width="@dimen/icon_size_24x24"
                android:layout_height="@dimen/icon_size_24x24"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_share"
                 />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_line_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/ys_display_regular"
                android:text="@string/support_send"
                android:textColor="@color/black"
                android:textSize="@dimen/ys_text_16"

                />

            <ImageView
                android:layout_width="@dimen/icon_size_24x24"
                android:layout_height="@dimen/icon_size_24x24"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_support" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_line_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/ys_display_regular"
                android:text="@string/EULA"
                android:textColor="@color/black"
                android:textSize="@dimen/ys_text_16"

                />

            <ImageView
                android:layout_width="@dimen/icon_size_24x24"
                android:layout_height="@dimen/icon_size_24x24"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/ic_forward" />


        </FrameLayout>


    </LinearLayout>


</LinearLayout>

