<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.ui.settings.activity.SettingFragment">

    <LinearLayout
        android:id="@+id/title_template"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:padding="4dp"
        android:orientation="horizontal">

        <TextView
            style="@style/Title"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:textColor="?attr/colorOnPrimary"
            >

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24sp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="4dp">

        <androidx.appcompat.widget.SwitchCompat
            style="@style/Switch"
            android:id="@+id/theme_switch"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center_vertical"
            android:text="@string/dark_theme"
            android:insetLeft="0dp"
            android:textSize="@dimen/ys_text_16"
             />

        <FrameLayout
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_line_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                style="@style/TextSettings"
                android:text="@string/share_app" />

            <ImageView
                android:layout_width="@dimen/icon_size_24x24"
                android:layout_height="@dimen/icon_size_24x24"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_share"
                 />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/support_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_line_height"
            android:orientation="horizontal">

            <TextView
                android:text="@string/support_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                style="@style/TextSettings"

                />

            <ImageView
                android:layout_width="@dimen/icon_size_24x24"
                android:layout_height="@dimen/icon_size_24x24"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_support" />


        </FrameLayout>

        <FrameLayout
            android:id="@+id/eula_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_line_height"
            android:orientation="horizontal">

            <TextView
                style="@style/TextSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/eula"
                />

            <ImageView
                android:layout_width="@dimen/icon_size_24x24"
                android:layout_height="@dimen/icon_size_24x24"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_forward" />


        </FrameLayout>


    </LinearLayout>


</LinearLayout>

