<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.playlistmaker.ui.library.activity.CreateAlbumFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageButton
            android:id="@+id/arrow_back"
            style="@style/BackArrowButton"
            android:layout_width="@dimen/back_button"
            android:layout_height="@dimen/back_button"
            android:layout_marginStart="4dp" />

        <TextView
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:gravity="top"
            android:text="@string/new_playlist"
            android:textColor="?attr/colorOnPrimary" />

    </LinearLayout>

    <ImageView
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_gravity="center"
        android:layout_marginTop="26dp"
        android:background="@drawable/album_create_placeholder" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/Album_name"
        app:boxStrokeColor="@color/border_textview"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:cursorColor="@color/yp_blue"
        app:hintTextColor="@color/yp_blue"
        android:textColorHint="@color/yp_text_grey">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:textSize="@dimen/ys_text_16" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/about"
        app:boxStrokeColor="@color/border_textview"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1dp"
        app:cursorColor="@color/yp_blue"
        app:hintTextColor="@color/yp_blue"
        android:textColorHint="@color/yp_text_grey">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:textSize="@dimen/ys_text_16" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="32dp"
        android:layout_gravity="bottom"
        android:text="@string/create"
        android:textAllCaps="false"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetLeft="0dp"
        android:letterSpacing="0"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="@dimen/ys_text_16"
        app:backgroundTint="@color/button_state"
        />
</FrameLayout>