<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.playlistmaker.ui.player.activity.PlayerFragment">


        <ImageView
            android:id="@+id/track_image"

            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/zero"
            android:layout_marginStart="@dimen/space_24"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="@dimen/space_24"
            android:layout_marginBottom="@dimen/space_24"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/track_name"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@color/yp_text_grey" />

        <TextView
            android:id="@+id/track_name"

            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/ys_text_22"

            android:layout_marginStart="@dimen/space_24"
            android:layout_marginEnd="@dimen/space_24"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/track_image"
            tools:text="Yestf(Remastered 2009)" />

        <TextView
            android:id="@+id/track_artist_name"

            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"

            android:layout_marginTop="12dp"

            android:ellipsize="end"
            android:maxLines="1"

            android:textSize="@dimen/ys_text_14"


            app:layout_constraintEnd_toEndOf="@+id/track_name"
            app:layout_constraintStart_toStartOf="@+id/track_name"
            app:layout_constraintTop_toBottomOf="@id/track_name"
            tools:text="Rose" />


        <ImageButton
            android:id="@+id/arrow_back"
            style="@style/BackArrowButton"
            android:layout_width="@dimen/back_button"
            android:layout_height="@dimen/back_button"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/like"

            style="@style/BackArrowButton"
            android:layout_width="@dimen/player_buttons"
            android:layout_height="@dimen/player_buttons"

            android:layout_marginStart="56dp"
            android:src="@drawable/dislike_button"
            app:layout_constraintStart_toEndOf="@id/play"
            app:layout_constraintTop_toTopOf="@id/queue" />

        <ImageButton
            android:id="@+id/queue"
            style="@style/BackArrowButton"
            android:layout_width="@dimen/player_buttons"

            android:layout_height="@dimen/player_buttons"
            android:layout_marginTop="@dimen/space_24"
            android:layout_marginEnd="56dp"
            android:src="@drawable/queue_button"
            app:layout_constraintEnd_toStartOf="@id/play"
            app:layout_constraintTop_toTopOf="@id/play" />

        <ImageButton
            android:id="@+id/play"
            style="@style/BackArrowButton"
            android:layout_width="100dp"
            android:layout_height="100dp"


            android:layout_marginTop="28dp"
            android:layout_marginBottom="48dp"

            android:src="@drawable/play_button"
            app:layout_constraintBottom_toTopOf="@+id/time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/track_artist_name" />

        <TextView
            android:id="@+id/play_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="4dp"
            android:text="@string/play_progress"
            app:layout_constraintEnd_toEndOf="@id/track_image"
            app:layout_constraintStart_toStartOf="@id/track_image"

            app:layout_constraintTop_toBottomOf="@id/play" />

        <TextView
            android:id="@+id/time"
            style="@style/TrackInfoName"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/indent_start_end"
            android:layout_marginBottom="@dimen/indent_start_end"

            android:text="@string/track_time"

            app:layout_constraintBottom_toTopOf="@id/album"
            app:layout_constraintEnd_toStartOf="@id/track_time"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/track_time"
            style="@style/trackInfoValue"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4"

            android:layout_marginEnd="@dimen/indent_start_end"


            app:layout_constraintBaseline_toBaselineOf="@id/time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/time"
            tools:text="0:00" />

        <TextView
            android:id="@+id/album"
            style="@style/TrackInfoName"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"

            android:layout_marginBottom="@dimen/indent_start_end"

            android:text="@string/album"

            app:layout_constraintBottom_toTopOf="@id/about"
            app:layout_constraintEnd_toEndOf="@id/time"

            app:layout_constraintStart_toStartOf="@id/time" />

        <TextView
            android:id="@+id/album_count"
            style="@style/trackInfoValue"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4"

            android:layout_marginEnd="@dimen/indent_start_end"


            app:layout_constraintBaseline_toBaselineOf="@id/album"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/time"
            tools:text="0:00" />

        <TextView
            android:id="@+id/about"
            style="@style/TrackInfoName"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"

            android:layout_marginBottom="@dimen/indent_start_end"

            android:text="@string/year"

            app:layout_constraintBottom_toTopOf="@id/style"
            app:layout_constraintEnd_toEndOf="@id/time"


            app:layout_constraintStart_toStartOf="@id/time" />

        <TextView
            android:id="@+id/year_count"
            style="@style/trackInfoValue"
            android:layout_width="@dimen/zero"

            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4"


            android:layout_marginEnd="@dimen/indent_start_end"

            app:layout_constraintBaseline_toBaselineOf="@id/about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/time"
            tools:text="0:00" />

        <TextView
            android:id="@+id/style"
            style="@style/TrackInfoName"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"

            android:layout_marginBottom="@dimen/indent_start_end"

            android:text="@string/style"

            app:layout_constraintBottom_toTopOf="@id/country"

            app:layout_constraintEnd_toEndOf="@id/time"
            app:layout_constraintStart_toStartOf="@id/time" />

        <TextView
            android:id="@+id/style_count"
            style="@style/trackInfoValue"
            android:layout_width="@dimen/zero"

            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4"

            android:layout_marginEnd="@dimen/indent_start_end"

            app:layout_constraintBaseline_toBaselineOf="@id/style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/time"
            tools:text="0:00" />

        <TextView
            android:id="@+id/country"
            style="@style/TrackInfoName"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"

            android:layout_marginBottom="20dp"

            android:text="@string/country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/time"


            app:layout_constraintStart_toStartOf="@id/time" />

        <TextView
            android:id="@+id/country_count"
            style="@style/trackInfoValue"
            android:layout_width="@dimen/zero"

            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4"

            android:layout_marginEnd="@dimen/indent_start_end"

            app:layout_constraintBaseline_toBaselineOf="@id/country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/time"
            tools:text="0:00" />

        <FrameLayout
            android:id="@+id/shadow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yp_black"
            android:alpha="0.5"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottomsheet_background"
        android:orientation="vertical"
        app:behavior_peekHeight="240dp"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/add_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/add_to_playList"
            android:textSize="@dimen/ys_text_19" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_play_list"
            style="@style/SearchMessageButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:text="@string/new_album" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
